@@ -2,6 +2,7 @@ plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.kotlin.compose)
+//    alias(libs.plugins.javaagent)
 }
 
 android {
@@ -37,8 +38,14 @@ android {
     buildFeatures {
         compose = true
     }
+
+    tasks.withType<Test> {
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
+    }
+    //
       testOptions.unitTests.isIncludeAndroidResources = true
 }
+
 
 dependencies {
 //retrofit
@@ -47,6 +54,8 @@ dependencies {
 
     //compose Nav
     implementation(libs.composeNav)
+
+//    implementation(libs.javaagent)
 
 
     implementation(libs.androidx.core.ktx)
@@ -61,6 +70,7 @@ dependencies {
 
     testImplementation(libs.robolectric)
     testImplementation(libs.coroutinesTest)
+    testImplementation(libs.mockk)
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
